Fixed issue of control panel sideNav getting cut off a bit at the bottom on mobile.

--- a/src/components/layout/SideNav/SideNav.module.css
+++ b/src/components/layout/SideNav/SideNav.module.css
@@ -50,6 +50,7 @@
 
   .cp-side-nav-mobile-show {
     width: 100%;
+    height: 90vh;
   }
 
   .showHideSideBar {
